v3.0/getting-started/kubernetes/tutorials/stars-policy/policies/allow-ui-client.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: client 
  name: allow-ui 
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: management-ui
